[package]
name = "zhobo"
version = "0.1.0"
authors = ["Kyoto7250 <kyoto7250@aol.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/kyoto7250/zhobo"
repository = "https://github.com/kyoto7250/zhobo"
readme = "README.md"
description = "A cross-platform TUI database viewer written in Rust. Personally maintained gobang project"
exclude = ["resources/"]
keywords = ["database", "cli", "Rust", "tui", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
crossterm = "0.28.0"
anyhow = "1.0.86"
unicode-width = "0.1.13"
sqlx = { version = "0.8.1", features = ["mysql", "postgres", "sqlite", "chrono", "rust_decimal", "runtime-tokio-rustls", "json"], default-features = false }
chrono = "0.4.38"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
serde_json = "1.0.117"
thiserror = "2.0.0"
serde = "1.0.203"
toml = "0.8.14"
strum = "0.26.2"
strum_macros = "0.26.4"
easy-cast = "0.5.2"
async-trait = "0.1.80"
itertools = "0.13.0"
rust_decimal = "1.35"
dirs-next = "2.0.0"
clap = "4.5.7"
structopt = "0.3.26"
syntect = { version = "5.0", default-features = false, features = ["metadata", "default-fancy"]}
unicode-segmentation = "1.11.0"
ron = "0.8.1"

[target.'cfg(all(target_family="unix",not(target_os="macos")))'.dependencies]
which = "7.0.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
strip = true
lto = true